--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -27,6 +27,10 @@
       <mat-icon>library_books</mat-icon>
       <span>Disciplinas</span>
     </button>
+    <button (click)="redirectTurmas()" mat-menu-item>
+      <mat-icon>groups</mat-icon>
+      <span>Turmas</span>
+    </button>
   </mat-menu>
 
   <span class="tituloH">HEIMDALL</span>
