--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -11,7 +11,7 @@
       <mat-icon>apartment</mat-icon>
       <span>Instituição</span>
     </button>
-    <button (click)="redirectRegistrationList()" mat-menu-item>
+    <button (click)="redirectValidacaoAlunos()" mat-menu-item>
       <mat-icon>how_to_reg</mat-icon>
       <span>Cadastrar Alunos</span>
     </button>
