save faltando funções das validações, colocar disciplina_id em curso e finalização de turma

--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -13,7 +13,11 @@
     </button>
     <button (click)="redirectValidacaoAlunos()" mat-menu-item>
       <mat-icon>how_to_reg</mat-icon>
-      <span>Cadastrar Alunos</span>
+      <span>Validar Alunos</span>
+    </button>
+    <button (click)="redirectValidacaoProfessores()" mat-menu-item>
+      <mat-icon>fact_check</mat-icon>
+      <span>Validar Professores</span>
     </button>
     <button (click)="redirectReserve()" mat-menu-item>
       <mat-icon>schedule</mat-icon>
