--- a/src/app/tela-turmas/tela-turmas-feitas/tela-turmas-feitas.component.scss
+++ b/src/app/tela-turmas/tela-turmas-feitas/tela-turmas-feitas.component.scss
@@ -57,3 +57,13 @@ mat-paginator {
   width: 30px;
   margin-right: 10px;
 }
+
+.alunos-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.alunos-list li {
+  padding: 10px;
+}
