--- a/src/app/role-adm/tela-edit-aluno/tela-edit-aluno.component.html
+++ b/src/app/role-adm/tela-edit-aluno/tela-edit-aluno.component.html
@@ -1,9 +1,9 @@
-<h1>Adicione um ADM</h1>
+<h1>Edite o aluno</h1>
 <div class="container">
   <div class="dadosPessoais">
-    <form [formGroup]="cadastroProfessorAdmForm" (ngSubmit)="cadastro()">
+    <form [formGroup]="cadastroAlunoForm" (ngSubmit)="edit()">
       <mat-form-field appearance="fill">
-        <mat-label>Nome do Administrador:</mat-label>
+        <mat-label>Nome do aluno:</mat-label>
         <input formControlName="nome" matInput />
         <mat-icon matSuffix>account_circle</mat-icon>
       </mat-form-field>
@@ -12,18 +12,6 @@
         <mat-label>Email:</mat-label>
         <input formControlName="email" matInput />
         <mat-icon matSuffix>email</mat-icon>
-      </mat-form-field>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Senha:</mat-label>
-        <input type="password" formControlName="senha" matInput />
-        <mat-icon matSuffix>vpn_key</mat-icon>
-      </mat-form-field>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Confirme a senha:</mat-label>
-        <input type="password" formControlName="confirmarSenha" matInput />
-        <mat-icon matSuffix>vpn_key</mat-icon>
       </mat-form-field>
 
       <mat-form-field>
@@ -37,6 +25,19 @@
         />
         <mat-icon matSuffix>assignment_ind</mat-icon>
       </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Ano de Entrada</mat-label>
+        <input
+          formControlName="ano_entrada"
+          type="number"
+          matInput
+          placeholder="ano_entrada"
+          value=""
+        />
+        <mat-icon matSuffix>assignment_ind</mat-icon>
+      </mat-form-field>
+
       <div class="alterarEmail">
         <button
           mat-button
@@ -45,7 +46,7 @@
           mat-raised-button
           color="secondary"
         >
-          Cadastrar
+          Editar
         </button>
       </div>
     </form>
