--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -54,9 +54,7 @@
       <div class="header">
         <mat-icon *ngIf="block.name == 'Cursos'">cast_for_education</mat-icon>
         <mat-icon *ngIf="block.name == 'Professores'">person_outline</mat-icon>
-        <mat-icon *ngIf="block.name == 'Administradores'"
-          >admin_panel_settings</mat-icon
-        >
+        <mat-icon *ngIf="block.name == 'Alunos'">admin_panel_settings</mat-icon>
         <h2 style="margin-left: 10px">{{ block.name }}</h2>
       </div>
       <div class="container">
