ajuste home-teacher

--- a/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.scss
+++ b/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.scss
@@ -67,8 +67,8 @@ mat-card {
 
 mat-card-header {
   margin-bottom: 2%;
-  height: 60%;
   background: #83cf79;
+  height: 2cm;
 }
 
 mat-card-title {
