--- a/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
+++ b/src/app/tela-disciplinas/tela-disciplinas-feitas/tela-disciplinas-feitas.component.html
@@ -80,6 +80,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
         <td mat-cell *matCellDef="let row">{{ row.descricao }}</td>
       </ng-container>
+      <ng-container matColumnDef="curso">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Curso</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.curso?.nome || "Curso não disponível" }}
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
