--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -7,6 +7,10 @@
       <mat-icon>dialpad</mat-icon>
       <span>Cadastro/Login</span>
     </button>
+    <button (click)="openSuporteAjuda()" mat-menu-item>
+      <mat-icon>help</mat-icon>
+      <span>Suporte & Ajuda</span>
+    </button>
   </mat-menu>
 
   <span class="tituloH">HEIMDALL</span>
