fix: tela see more excluir editar

--- a/src/app/tela-see-more/tela-see-more.component.html
+++ b/src/app/tela-see-more/tela-see-more.component.html
@@ -116,7 +116,7 @@
       (click)="edit(selectionEdit.selected[0])"
       class="demo-button"
     >
-      EDITAR SALA
+      EDITAR
     </button>
     <button
       mat-raised-button
@@ -124,7 +124,7 @@
       (click)="apagar()"
       class="demo-button"
     >
-      EXCLUIR SALA
+      EXCLUIR
     </button>
   </div>
 </div>
